<resources>
    <string name="app_name">COMP3025-W24-Assignment2-Calculator-App</string>
        <string name="clear">\u0043</string>
        <string name="percent">%</string>
        <string name="backspace">⌫</string>
        <string name="divide">÷</string>
        <string name="multiply">×</string>
        <string name="subtract">-</string>
        <string name="add">+</string>
        <string name="plus_minus">\ue43c</string>
        <string name="equals">\u003d</string>

        <string name="zero">\u0030</string>
        <string name="one">\u0031</string>
        <string name="two">\u0032</string>
        <string name="three">\u0033</string>
        <string name="four">\u0034</string>
        <string name="five">\u0035</string>
        <string name="six">\u0036</string>
        <string name="seven">\u0037</string>
        <string name="eight">\u0038</string>
        <string name="nine">\u0039</string>
</resources>